--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ SEOTitle: 博客 - 让沟通更容易
 header-img: img/post-bg-desk.jpg
 email: jacobck@163.com
 description: "如果github网络抽风，请耐心等等或者搬梯子"
-keyword: "不玩短平快玩博客"
+keyword: "分布式博客，创作的内容归于你自己"
 url: "https://jacobck163.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/jacobck163/jacobck163.github.io.git" # you code repository
@@ -96,16 +96,3 @@ service-worker: true
 
 
 
-# 友情链接，请尽量不要删除，谢谢！
-friends: [
-    {
-        title: "格罗比言·全球语",
-        href: "https://globien.gitee.io"
-    },{
-        title: "格罗比言互动社区",
-        href: "https://tieba.baidu.com/f?kw=%E6%A0%BC%E7%BD%97%E6%AF%94%E8%A8%80&fr=home"
-    },{
-        title: "知乎：人造国际语",
-        href: "https://zhuanlan.zhihu.com/Artificial-International-Language"
-    }
-]
