--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ header-img: img/post-bg-desk.jpg
 email: jacobck@163.com
 description: "如果github网络抽风，请多刷新几次"
 keyword: "技术与读书"
-url: "https://jacobck163.github.io/"          # your host, for absolute URL
+url: "https://jacobblog.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/jacobck163/jacobck163.github.io.git" # you code repository
+github_repo: "https://github.com/jacobck163/jacobblog.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
@@ -64,7 +64,7 @@ gitalk:
   enable: true    #是否开启Gitalk评论
   clientID: ca58fde23072fac54835                            #生成的clientID
   clientSecret: 6ec75a55aef8c33b4519c9dd6d9a47843ebf4d8a     #生成的clientSecret
-  repo: jacobck163.github.io    #仓库名称
+  repo: jacobblog.github.io    #仓库名称
   owner: jacobck163    #github用户名
   admin: jacobck163
   distractionFreeMode: true #是否启用类似FB的阴影遮罩
