--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ description: "如果github网络抽风，请多刷新几次"
 keyword: "技术与读书"
 url: "https://jacobck163.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
-github_repo: "https://github.com/jacobck163/jacobblog.github.io.git" # you code repository
+github_repo: "https://github.com/jacobck163/blog_discussion" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
