--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: Jacob的博客
-SEOTitle: 技术与读书
+SEOTitle: 计算机技术与读书
 header-img: img/post-bg-desk.jpg
 email: jacobck@163.com
 description: "如果github网络抽风，请多刷新几次"
-keyword: "技术与读书"
+keyword: "计算机技术与读书"
 url: "https://jacobck163.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/jacobck163/jacobck163.github.io.git" # you code repository
