--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Jacob的博客
 SEOTitle: 计算机技术与读书
 header-img: img/post-bg-desk.jpg
 email: jacobck@163.com
-description: "如果github网络抽风，请多刷新几次"
+description: "个人作品简介"
 keyword: "计算机技术与读书"
 url: "https://jacobck163.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
